@@ -39,7 +39,8 @@ type type_descriptions =
 (* For short-paths *)
 val iter_types:
     (Path.t -> Path.t * (type_declaration * type_descriptions) -> unit) ->
-    t -> unit
+    t -> (Path.t * (unit -> unit)) list
+val run_iter_env: (unit -> unit) list -> (Path.t * (unit -> unit)) list
 val same_types: t -> t -> bool
 val used_persistent: unit -> Concr.t
 val find_shadowed_types: Path.t -> t -> Path.t list
