@@ -216,6 +216,8 @@ let apply_subst s1 tyl =
 type best_path = Paths of Path.t list | Best of Path.t
 
 let printing_env = ref Env.empty
+let printing_depth = ref 0
+let printing_cont = ref ([] : (unit -> unit) list)
 let printing_old = ref Env.empty
 let printing_pers = ref Concr.empty
 module Path2 = struct
@@ -232,7 +234,7 @@ module Path2 = struct
     | _ -> Pervasives.compare p1 p2
 end
 module PathMap = Map.Make(Path2)
-let printing_map = ref (Lazy.from_val PathMap.empty)
+let printing_map = ref PathMap.empty
 
 let same_type t t' = repr t == repr t'
 
@@ -287,24 +289,26 @@ let set_printing_env env =
     (* printf "Reset printing_map@."; *)
     printing_old := env;
     printing_pers := Env.used_persistent ();
-    printing_map := lazy begin
-      (* printf "Recompute printing_map.@."; *)
-      let map = ref PathMap.empty in
+    printing_map := PathMap.empty;
+    printing_depth := 0;
+    (* printf "Recompute printing_map.@."; *)
+    let cont () =
+      ignore (
       Env.iter_types
         (fun p (p', decl) ->
           let (p1, s1) = normalize_type_path env p' ~cache:true in
           (* Format.eprintf "%a -> %a = %a@." path p path p' path p1 *)
           if s1 = Id then
           try
-            let r = PathMap.find p1 !map in
+            let r = PathMap.find p1 !printing_map in
             match !r with
               Paths l -> r := Paths (p :: l)
-            | Best _  -> assert false
+            | Best p' -> r := Paths [p; p'] (* assert false *)
           with Not_found ->
-            map := PathMap.add p1 (ref (Paths [p])) !map)
-        env;
-      !map
-    end
+            let ps = if Env.is_functor_arg p1 Env.empty then [p;p1] else [p] in
+            printing_map := PathMap.add p1 (ref (Paths ps)) !printing_map)
+        env) in
+    printing_cont := [cont];
   end
 
 let wrap_printing_env env f =
@@ -328,7 +332,8 @@ let is_unambiguous path env =
 
 let rec get_best_path r =
   match !r with
-    Best p' -> p'
+    Best p' ->
+      if fst (path_size p') > !printing_depth then raise Not_found else p'
   | Paths [] -> raise Not_found
   | Paths l ->
       r := Paths [];
@@ -347,10 +352,21 @@ let best_type_path p =
   then (p, Id)
   else
     let (p', s) = normalize_type_path !printing_env p in
-    let p'' =
-      try get_best_path (PathMap.find  p' (Lazy.force !printing_map))
-      with Not_found -> p'
+    let r =
+      try PathMap.find p' !printing_map
+      with Not_found ->
+        let ps = if Env.is_functor_arg p' Env.empty then [p'] else [] in
+        let r = ref (Paths ps) in
+        printing_map := PathMap.add p' r !printing_map;
+        r
     in
+    while !printing_cont <> [] &&
+      try ignore (get_best_path r); false with Not_found -> true
+    do
+      printing_cont := List.map snd (Env.run_iter_env !printing_cont);
+      incr printing_depth;
+    done;
+    let p'' = try get_best_path r with Not_found -> p' in
     (* Format.eprintf "%a = %a -> %a@." path p path p' path p''; *)
     (p'', s)
 
